--- a/uni.scss
+++ b/uni.scss
@@ -20,6 +20,7 @@ $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
 $scheme-font: #344356;
+$uni-container-bg: #f3f4f6;
 
 /* 文字基本颜色 */
 $uni-text-color:#333;//基本色
